# e2fly

./: .editorconfig  .env  .gitignore  .npmrc  .oxfmtrc.json  .prettierrc  LICENSE  README.md  auto-components.d.ts  biome.json  index.html  package.json  pnpm-lock.yaml  release.conf.ts  tsconfig.json  uno.config.ts  version.ts  vite.config.ts  x.release.conf.ts
.devcontainer/: devcontainer.json
.github/workflows/: release.yml
.zed/: settings.json
assets/: app.icns  logo.icns
grpc/: v2ray.proto  v2ray.test.json
scripts/: build.ts  buildTunHelper.ts  gen-config-types.ts  gen-icons.ts  gen-proto-types.sh  icons.preset.json  make-icon.ts  shared.ts
src/: App.vue  auto-components.d.ts  env.d.ts  i18n.ts  index.html  main.ts
src-main/: config.ts  index.ts  mainWindow.ts
src-render/components/: HelloWorld.vue
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/assets/: common.json  common.jsonc
src-tauri/binaries/: .gitignore  hev-socks5-tunnel-aarch64-apple-darwin  hev-socks5-tunnel-x86_64-apple-darwin
src-tauri/capabilities/: desktop.json
src-tauri/icons/: icon.icns
src-tauri/icons/enabled/: icon.icns
src-tauri/src/: app.rs  const_var.rs  env.rs  logger.rs  main.rs  menu.rs  net.rs  program.rs  proxy.rs  system_proxy.rs  tauri.rs  tray.rs  tun.rs  update_dat.rs  updater.rs  utils.rs  v2fly.rs
src-tauri/src/conf/: mod.rs  model.rs  model_impl.rs
src-tauri/src/config/: mod.rs  model.rs  model_impl.rs
src-tauri/src/ipc/: mod.rs
src-tauri/src/lib/: mod.rs  nonblock.rs
src-tauri/src/proxy/: mac.rs  mod.rs  win.rs
src-tauri/src/server/: mod.rs
src-tauri/tun-helper/: Cargo.toml
src-tauri/tun-helper/src/: lib.rs  main.rs  net.rs  utils.rs
src/components/: BinaryCheckbox.vue  Checkbox.vue  Drawer.vue  E2flyConfig.vue  HelloWorld.vue  LoadingPanel.vue
src/components/Editor/: MonacoEditor.vue  useMonaco.ts  userWorker.ts
src/config/: config.types.ts  index.ts  types.ts
src/events/: index.ts
src/hooks/: useEvent.ts  useInterval.ts
src/ipc/: index.ts
src/locales/: en.yaml  zh.yaml
src/logic/: v2fly.ts  win.ts
src/main/: index.ts  mainWindow.ts  tray.ts
src/main/config/: index.ts  types.ts
src/main/rpc/: methods.ts  server.ts
src/main/service/: config.ts  index.ts  v2fly.ts
src/main/service/sysproxy/: MacProxy.ts  SysProxy.ts  WinProxy.ts  index.ts  sysproxy.ts
src/main/service/v2fly/: gen-conf.ts  index.ts
src/main/statistics/: v2ray.ts
src/main/sysproxy/: MacProxy.ts  sysproxy.ts
src/main/utils/: index.ts  is.ts  logger.ts  resource.ts
src/pages/components/: AppHead.vue  CodeHighlight.vue  menuConf.ts
src/pages/index/: index.vue  log.vue  server.vue  setting.vue
src/preload/: index.ts
src/proto/: v2ray.ts
src/proto/v2ray/core/app/stats/command/: Config.ts  GetStatsRequest.ts  GetStatsResponse.ts  QueryStatsRequest.ts  QueryStatsResponse.ts  Stat.ts  StatsService.ts  SysStatsRequest.ts  SysStatsResponse.ts
src/render/: App.vue  auto-components.d.ts  bridge.ts  i18n.ts  index.html  main.ts
src/render/components/: HelloWorld.vue
src/render/logic/: v2fly.ts
src/render/pages/: index.vue
src/render/pages/components/: AppHead.vue  AppHeadAppend.vue  AppSidebar.vue  E2flyConfCard.vue  menuConf.ts
src/render/pages/index/: index.vue  log.vue  server.vue  setting.vue
src/render/rpc/: index.ts  methods.ts
src/render/store/: index.ts
src/render/utils/: logger.ts
src/rpc/: index.ts
src/store/: index.ts
src/style/: index.css
src/utils/: logger.ts
test-conf/: config.json
types/: auto-components.d.ts  auto-imports.d.ts  typed-router.d.ts
vite-plugin/: build.config.ts  esbuild.options.ts  handle.ts  index.ts  options.ts  types.ts
