[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["Jerry Wang"]
license = "MIT"
repository = "https://github.com/0x-jerry/e2fly.git"
default-run = "app"
edition = "2021"
rust-version = "1.78"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [
  "devtools", "image-ico", "tray-icon",
] }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
dirs = "5.0"
serde_derive = "1.0.204"
rev_buf_reader = "0.3.0"
os_pipe = "1.2.0"
file-rotate = "0.7.6"
tauri-plugin-clipboard-manager = "2.0.1"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
