[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["Jerry Wang"]
license = "MIT"
repository = "https://github.com/0x-jerry/e2fly.git"
default-run = "app"
edition = "2021"
rust-version = "1.78"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = ["image-ico", "tray-icon"] }
dirs = "6"
serde_derive = "1"
rev_buf_reader = "0.3"
os_pipe = "1"
file-rotate = "0.7"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
# derive_more = { version = "1.0.0", features = ["deref"] }
# tokio = "1.41.0"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-shell = "2"
tauri-plugin-window-state = "2"
tauri-plugin-opener = "2"

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
strip = true      # Remove debug symbols
